--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,11 @@ body {
   background-color: #0E6EB8;
 }
 
+.pageMargin {
+  margin-top: 20px;
+  margin-bottom: 140px;
+}
+
 /* NavBar */
 .navLinkTitle {
   font-family: 'Audiowide', cursive;
@@ -47,8 +52,26 @@ body {
 }
 
 
+/* Home */
+.card {
+  margin-bottom: 15px;
+  box-shadow: 1px 1px 5px 1px #ccc;
+}
 
+.loader {
+  margin: auto;
+  border: 16px solid #f3f3f3;
+  border-top: 16px solid #0E6EB8;
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  animation: spin 2s linear infinite;
+}
 
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 
 
 
