--- a/src/index.css
+++ b/src/index.css
@@ -73,24 +73,14 @@ body {
     100% { transform: rotate(360deg); }
 }
 
-/* @media (max-width: 767px) {
-  .card-columns {
-    column-count: 1;
-  }
-}
 
-@media (min-width: 768px) and (max-width: 991px) {
-  .card-columns {
-    column-count: 2;
-  }
-}
 
-@media (min-width: 992px) {
-  .card-columns {
-    column-count: 3;
-  }
+
+
+
+.fa.fa-star-o {
+  background-color: yellow;
 }
- */
 
 
 
@@ -130,7 +120,7 @@ body {
    height: 0;
 }
 
-
+*/
 .ui.steps .step {
   position: relative;
   display: -webkit-box;
@@ -179,7 +169,7 @@ body {
   background: #ef2867;
 }
 
-
+/*
 @media only screen and (max-width: 767px) {
     .mobile-hide{
         display: none !important;
