--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@ body {
 }
 
 */
-.ui.steps .step {
+/* .ui.steps .step {
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -156,7 +156,7 @@ body {
 .ui.steps .step.deniedStep {
   cursor: auto;
   background: #ef2867;
-}
+} */
 
 /*
 @media only screen and (max-width: 767px) {
